# RealTimeCurve

./: .gitignore  CMakeLists.txt  README.md  basewidget.cpp  basewidget.h  main.cpp
